--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -7,7 +7,7 @@
     "skipLibCheck": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["packages/client/src/*"]
     },
 
     /* Bundler mode */
@@ -24,5 +24,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"]
+  "include": ["packages/client/src"]
 }
